--- a/frontend/latencyzero_client/package.json
+++ b/frontend/latencyzero_client/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
+    "ng-angular-popup": "^2.1.0",
     "ng2-charts": "^7.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
